--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.0.0",
     "react-bootstrap-typeahead": "^2.0.0-rc.4",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.16"
+    "react-scripts": "1.0.16",
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
