--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "react": "^16.0.0",
     "react-bootstrap-typeahead": "^2.0.0-rc.4",
     "react-dom": "^16.0.0",
@@ -12,14 +10,9 @@
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
-    "webpack-server": "webpack-dev-server --hot --progress --colors",
-    "web-server": "http-server -p 3000 .",
-    "start": "npm run webpack-server & npm run web-server",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5"
   }
 }
