--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass-chokidar": "0.0.3",
     "react": "^16.0.0",
     "react-bootstrap-typeahead": "^2.0.0-rc.4",
     "react-dom": "^16.0.0",
@@ -10,7 +11,9 @@
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar src/ -o src/",
     "start": "react-scripts start",
+    "postinstall": "npm run build-css",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
